# eww-scripts

./: .gitignore  Cargo.toml  README.md  flake.nix
hyprland/: Cargo.toml
hyprland/src/: clients.rs  lib.rs  submap.rs  workspaces.rs
src/: main.rs
