[package]
name = "eww-scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["hyprland"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
hyprland = { path = "./hyprland" }
